--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         video.setAttribute('data-setup', '{}');
         const source = document.createElement('source');
         source.setAttribute('src', videoUrl);
-        source.setAttribute('type', 'video/mp4');
+        // source.setAttribute('type', 'video/mp4');
         video.appendChild(source);
         document.querySelector('.container').appendChild(video);
     </script>
